--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,10 @@ dependencies = [
 packages = [{include = "events_app_backend", from = "src"}]
 
 
+[tool.poetry.group.dev.dependencies]
+httpx = "^0.28.1"
+pytest-cov = "^6.2.1"
+
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
